<resources>
    <string name="app_name">TicTacToe</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="random_greet">Random Greet</string>
    <string name="countries">Countries</string>
    <string name="player_one_x">PLAYER ONE (X)</string>
    <string name="player_two_o">PLAYER TWO (O)</string>
    <string name="new_game">New Game</string>
    <string name="volver">Volver</string>

    <!-- un arreglo de strings con los strings disponibles para elegir-->
    <string-array name="idiomas">
        <item>Español</item>
        <item>English</item>
        <item>Français</item>
        <item>Italiano</item>
        <item>Deutsch</item>

    </string-array>
</resources>