<?xml version="1.0" encoding="utf-8"?>
<!-- se utilizó ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TicTacToeActivity">

    <TextView
        android:id="@+id/tvPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_x"
        android:textSize="22sp"
        android:textColor="@color/softGreen"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Si no se usa esta notación para ConstraintLayout no funciona -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boardContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">


        <Button
            android:id="@+id/btn1"
            style="@style/TicTacToeButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn2"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn3"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn4"
            style="@style/TicTacToeButton"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn5"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn4"
            app:layout_constraintTop_toBottomOf="@id/btn2"/>

        <Button
            android:id="@+id/btn6"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@id/btn3"/>

        <Button
            android:id="@+id/btn7"
            style="@style/TicTacToeButton"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn8"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintTop_toBottomOf="@id/btn5"/>

        <Button
            android:id="@+id/btn9"
            style="@style/TicTacToeButton"
            app:layout_constraintStart_toEndOf="@id/btn8"
            app:layout_constraintTop_toBottomOf="@id/btn6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two_o"
        android:textSize="22sp"
        android:textColor="@color/softGreen"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/boardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
